FIX: Opera: options page not fully readable in dark mode
fixes #13

--- a/app/styles/options.css
+++ b/app/styles/options.css
@@ -12,3 +12,14 @@ input[type=datetime-local], select {
   border-radius: 4px;
   box-sizing: border-box;
 }
+
+@media (prefers-color-scheme: dark) {
+    body {
+        color: #fffff8;
+        background-color: #202023;
+    }
+
+    a {
+        color: #45A1FF;
+    }
+}
